--- a/firefox/css/main.css
+++ b/firefox/css/main.css
@@ -1,10 +1,36 @@
 
 html[remove_facebook_newsfeed="true"] .rq0escxv.l9j0dhe7.du4w35lb.j83agx80.g5gj957u.pmt1y7k9.buofh1pr.hpfvmrgz.taijpn5t.gs1a9yip.owycx6da.btwxx1t3.f7vcsfb0.fjf4s8hc.b6rwyo50.oyrvap6t,
 
-html[remove_instagram_explore="true"] .mJ2Qv._2Z_Zl.YrkqH
+html[remove_facebook_top_middle_bar="true"] .pmk7jnqg.h5g66v2i.nezaghv5,
+
+html[remove_facebook_left_bar="true"] .d2edcug0.hpfvmrgz.qv66sw1b.c1et5uql.oi732d6d.ik7dh3pa.fgxwclzu.a8c37x1j.keod5gw0.nxhoafnm.aigsh9s9.d9wwppkn.fe6kdd0r.mau55g9w.c8b282yb.mdeji52x.sq6gx45u.a3bd9o3v.knj5qynh.q66pz984.hzawbc8m,
+
+html[remove_instagram_explore="true"] .mJ2Qv._2Z_Zl.YrkqH,
+
+html[remove_instagram_stories="true"] .zGtbP.IPQK5.VideM,
+html[remove_instagram_stories="true"] .zGtbP.VideM,
+
+html[remove_instagram_suggestions="true"] ._8UZ6e,
+
+html[foo="bar"]
 
 {
 
 	display: none;
+
+}
+
+
+html[remove_instagram_suggestions="true"] ._8Rm4L.vboSt._6E_wP.ccgHY.GZkEI,
+html[remove_instagram_suggestions="true"] ._8Rm4L.bq3Mi._6E_wP.ccgHY.l9Ww0,
+
+html[foo="bar"]
+
+{
+
+	visibility: hidden;
+	height: 0;
+	margin: 0;
+	padding: 0;
 
 }
