Add more facebook options

--- a/firefox/css/main.css
+++ b/firefox/css/main.css
@@ -1,5 +1,11 @@
 
-html[remove_facebook_newsfeed="true"] .rq0escxv.l9j0dhe7.du4w35lb.j83agx80.g5gj957u.pmt1y7k9.buofh1pr.hpfvmrgz.taijpn5t.gs1a9yip.owycx6da.btwxx1t3.f7vcsfb0.fjf4s8hc.b6rwyo50.oyrvap6t,
+/* Stories */
+html[remove_facebook_stories="true"] div[aria-label="Stories"],
+
+/* Rooms */
+html[remove_facebook_rooms="true"] div[data-pagelet="VideoChatHomeUnit"],
+
+html[remove_facebook_newsfeed="true"] .pedkr2u6.tn0ko95a.pnx7fd3z,
 
 html[remove_facebook_top_middle_bar="true"] .pmk7jnqg.h5g66v2i.nezaghv5,
 
