Update descript and left notifications for Firefox

--- a/firefox/css/main.css
+++ b/firefox/css/main.css
@@ -7,6 +7,8 @@ html[remove_facebook_newsfeed="true"] .pedkr2u6.tn0ko95a.pnx7fd3z,
 html[remove_facebook_top_middle_bar="true"] .pmk7jnqg.h5g66v2i.nezaghv5,
 
 html[remove_facebook_left_bar="true"] .d2edcug0.hpfvmrgz.qv66sw1b.c1et5uql.oi732d6d.ik7dh3pa.fgxwclzu.a8c37x1j.keod5gw0.nxhoafnm.aigsh9s9.d9wwppkn.fe6kdd0r.mau55g9w.c8b282yb.mdeji52x.sq6gx45u.a3bd9o3v.knj5qynh.q66pz984.hzawbc8m,
+html[remove_facebook_left_bar="true"] .d2edcug0.hpfvmrgz.qv66sw1b.c1et5uql.oi732d6d.ik7dh3pa.fgxwclzu.a8c37x1j.keod5gw0.nxhoafnm.aigsh9s9.tia6h79c.fe6kdd0r.mau55g9w.c8b282yb.mdeji52x.sq6gx45u.a3bd9o3v.knj5qynh.q66pz984.hzawbc8m,
+html[remove_facebook_left_bar="true"] .d2edcug0.hpfvmrgz.qv66sw1b.c1et5uql.rrkovp55.a8c37x1j.keod5gw0.nxhoafnm.aigsh9s9.d9wwppkn.fe6kdd0r.mau55g9w.c8b282yb.mdeji52x.sq6gx45u.a3bd9o3v.knj5qynh.q66pz984.hzawbc8m,
 
 html[remove_instagram_explore="true"] .mJ2Qv._2Z_Zl.YrkqH,
 
