Fix explore page removal

--- a/chrome/css/main.css
+++ b/chrome/css/main.css
@@ -11,6 +11,7 @@ html[remove_facebook_left_bar="true"] .d2edcug0.hpfvmrgz.qv66sw1b.c1et5uql.oi732
 html[remove_facebook_left_bar="true"] .d2edcug0.hpfvmrgz.qv66sw1b.c1et5uql.rrkovp55.a8c37x1j.keod5gw0.nxhoafnm.aigsh9s9.d9wwppkn.fe6kdd0r.mau55g9w.c8b282yb.mdeji52x.sq6gx45u.a3bd9o3v.knj5qynh.q66pz984.hzawbc8m,
 
 html[remove_instagram_explore="true"] .mJ2Qv._2Z_Zl.YrkqH,
+html[remove_instagram_explore="true"] a[href="/explore/"],
 
 html[remove_instagram_stories="true"] .zGtbP.IPQK5.VideM,
 html[remove_instagram_stories="true"] .zGtbP.VideM,
